src/tests/snapshots/niri__tests__window_opening__check_target_size@ofT-dhU-b-wfsBN-t.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault window height: U\nborder on\nwant fullscreen: BN\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1272 × 712, states: [Activated]
