src/tests/snapshots/niri__tests__window_opening__check_target_size@ofT-dhU-wfsAN-t.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault window height: U\nwant fullscreen: AN\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
