src/tests/snapshots/niri__tests__window_opening__check_target_size@ofT-dwF1000-b-wfsAN-t.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault column width: F1000\nborder on\nwant fullscreen: AN\ntabbed"
expression: snapshot
---
initial configure:
size: 1000 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1272 × 712, states: [Activated]
